sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/Opportunity_Stage__c.object-meta.xml
<CustomObject>
    <label>Opportunity Stage History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opportunity Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>