sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Active_Stage__c.field-meta.xml
<CustomField>
    <fullName>Active_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Stage</label>
    <type>Checkbox</type>
</CustomField>