sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>DateTime</type>
</CustomField>