sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>