sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Opportunity Name</label>
    <type>AutoNumber</type>
</CustomField>