sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>From</label>
    <length>30</length>
    <type>Text</type>
</CustomField>