sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Projected_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Launch_Date__c</fullName>
    <label>Projected Launch Date</label>
    <type>Date</type>
</CustomField>