sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage__c/fields/Timeline_For_FLT_Transported_Stage__c.field-meta.xml
<CustomField>
    <fullName>Timeline_For_FLT_Transported_Stage__c</fullName>
    <label>Timeline For FLT Transported Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>